[package]
name = "nfs-fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "NFS v3/v4 protocol fuzzer for security testing"
license = "MIT"
repository = "https://github.com/yourusername/nfs-fuzzer"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Buffer handling
bytes = "1"

# Random number generation for mutations
rand = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization for saving test cases
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encoding for logging packets
hex = "0.4"

[dev-dependencies]
# Property-based testing
proptest = "1"

[profile.release]
# Keep debug info for crash analysis
debug = true
